--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -7,7 +7,7 @@ Registro
 {% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/diseño.css' %}">
+<link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
 {% endblock %}
 
 {% block forms %}
