--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -9,7 +9,7 @@
 		{% endblock %}
 	</title>
 	
-	<link rel="stylesheet" type="text/css" href="{% static 'css/diseño.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/diseño_auth.css' %}">
 	<link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -68,8 +68,8 @@
 		<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 		<script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
 		<script src="{% static 'js/ocultar_mensajes.js'%}"></script>
-		<script src="{% static 'js/validaciones.js' %}"></script>
 		<script src="{% static 'js/hide_show_passw.js' %}"></script>
+		<script src="{% static "js/parametros_clave.js" %}"></script>
 	{% endblock %}
 
 </body>
