--- a/Autenticacion/Modulos/Login/templates/cambiar_clave_primera_sesion.html
+++ b/Autenticacion/Modulos/Login/templates/cambiar_clave_primera_sesion.html
@@ -34,12 +34,14 @@ Cambiar Clave
                     {% endfor %}
                 </div>
                 {% endif %}
-                {% if form.password1.errors %}
-                <div class="error-message">
-                    {% for error in form.password1.errors %}
-                    <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
+                {% if form.errors %}
+                    <div class="error-message">
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <p>{{ error }}</p>
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
                 {% endif %}
                 <h2 class="title">Cambiar contraseña</h2>
                 
