--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -8,109 +8,104 @@
 {% endblock %}
 {% block controls %}
 
-{% if messages %}
-{% for message in messages %}
-<div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
-                        {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
-                        {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
-    {{ message }}
-</div>
-{% endfor %}
-{% endif %}
+    {% if messages %}
+        {% for message in messages %}
+        <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+            {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
+            {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
+            {{ message }}
+        </div>
+        {% endfor %}
+    {% endif %}
 
-{% if form.password2.errors %}
-<div class="error-message">
-    {% for error in form.password2.errors %}
-    <p>{{ error }}</p>
-    {% endfor %}
-</div>
-{% endif %}
-{% if form.cedula.errors %}
-<div class="error-message">
-    {% for error in form.cedula.errors %}
-    <p>{{ error }}</p>
-    {% endfor %}
-</div>
-{% endif %}
-<div class="form-grid">
-    <div class="input-div one">
-        <div class="i">
-            <i class="fa-solid fa-user"></i>
+    {% if form.errors %}
+        <div class="error-message">
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            {% endfor %}
         </div>
-        <div class="div">
-            <h5>Usuario</h5>
-            {{ form.username }}
+    {% endif %}
+    <div class="form-grid">
+        <div class="input-div one">
+            <div class="i">
+                <i class="fa-solid fa-user"></i>
+            </div>
+            <div class="div">
+                <h5>Usuario</h5>
+                {{ form.username }}
+            </div>
         </div>
-    </div>
-    <div class="input-div one">
-        <div class="i">
-            <i class="fa-solid fa-circle-user"></i>
+        <div class="input-div one">
+            <div class="i">
+                <i class="fa-solid fa-circle-user"></i>
+            </div>
+            <div class="div">
+                <h5>Nombre</h5>
+                {{ form.nombre }}
+            </div>
         </div>
-        <div class="div">
-            <h5>Nombre</h5>
-            {{ form.nombre }}
+        <div class="input-div one">
+            <div class="i">
+                <i class="fa-solid fa-circle-user"></i>
+            </div>
+            <div class="div">
+                <h5>Apellido</h5>
+                {{ form.apellido }}
+            </div>
         </div>
-    </div>
-    <div class="input-div one">
-        <div class="i">
-            <i class="fa-solid fa-circle-user"></i>
+        <div class="input-div one">
+            <div class="i">
+                <i class="fa-solid fa-id-card"></i>
+            </div>
+            <div class="div">
+                <h5>Cédula</h5>
+                {{ form.cedula }}
+            </div>
         </div>
-        <div class="div">
-            <h5>Apellido</h5>
-            {{ form.apellido }}
+        <div class="input-div email">
+            <div class="i">
+                <i class="fa-solid fa-envelope"></i>
+            </div>
+            <div class="div">
+                <h5>Correo Electrónico</h5>
+                {{ form.email }}
+            </div>
         </div>
-    </div>
-    <div class="input-div one">
-        <div class="i">
-            <i class="fa-solid fa-id-card"></i>
+        <div class="input-div pass">
+            <div class="i">
+                <i class="fa-solid fa-lock"></i>
+            </div>
+            <div class="div">
+                <h5>Contraseña</h5>
+                {{ form.password1 }}
+                <span id='toggleBtn1'></span>
+            </div>
         </div>
-        <div class="div">
-            <h5>Cédula</h5>
-            {{ form.cedula }}
+        <div class="input-div pass">
+            <div class="i">
+                <i class="fa-solid fa-lock"></i>
+            </div>
+            <div class="div">
+                <h5>Repetir contraseña</h5>
+                {{ form.password2 }}
+                <span id='toggleBtn2'></span>
+            </div>
         </div>
-    </div>
-    <div class="input-div email">
-        <div class="i">
-            <i class="fa-solid fa-envelope"></i>
-        </div>
-        <div class="div">
-            <h5>Correo Electrónico</h5>
-            {{ form.email }}
-        </div>
-    </div>
-    <div class="input-div pass">
-        <div class="i">
-            <i class="fa-solid fa-lock"></i>
-        </div>
-        <div class="div">
-            <h5>Contraseña</h5>
-            {{ form.password1 }}
-            <span id='toggleBtn1'></span>
-        </div>
-    </div>
-    <div class="input-div pass">
-        <div class="i">
-            <i class="fa-solid fa-lock"></i>
-        </div>
-        <div class="div">
-            <h5>Repetir contraseña</h5>
-            {{ form.password2 }}
-            <span id='toggleBtn2'></span>
-        </div>
-    </div>
-    <div class="input-div select">
-        <div class="i">
-            <i class="fa-solid fa-user-plus"></i>
-        </div>
-        <div class="div">
-            <h5>Rol</h5>
-            {{ form.rol }}
+        <div class="input-div select">
+            <div class="i">
+                <i class="fa-solid fa-user-plus"></i>
+            </div>
+            <div class="div">
+                <h5>Rol</h5>
+                {{ form.rol }}
+            </div>
         </div>
     </div>
-</div>
-<!-- Fin del nuevo campo -->
-<input type="submit" class="btn" value="Registrar">
-{% endblock %}
+    <!-- Fin del nuevo campo -->
+    <input type="submit" class="btn" value="Registrar">
+    {% endblock %}
 
 {% block js %}
 <script src="{% static 'js/hide_show_passw.js' %}"></script>
