Cambios de rutas

--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -38,7 +38,7 @@
     {% block main %}
     <div class="cards-container">
         <main class="cards">
-            <a href="{% url 'login:personal' %}">
+            <a href="#">
                 <div class="card">
                     <div class="img-container">
                         <i class="fa-solid fa-box-tissue"></i>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </a>
-            <a href="{% url 'login:registro' %}">
+            <a href="{% url 'login:personal' %}">
                 <div class="card">
                     <div class="img-container">
                         <i class="fa-solid fa-users"></i>
