--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -35,10 +35,10 @@
     </div>
     {% block boton %}
     <div class="text-center">
-        <button type="submit" class="btn">
+        <button type="submit" class="btn btn-success">
             Guardar registro
         </button>
-        <a href="{{cancelar}}" class="btn">
+        <a href="{{cancelar}}" class="btn btn-warning ">
             Cancelar
         </a>
     </div>
