--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -65,7 +65,7 @@
 
 
 	{% block JS %}
-		<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+		<script src="{% static 'js/input_effect.js' %}"></script>
 		<script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
 		<script src="{% static 'js/ocultar_mensajes.js'%}"></script>
 		<script src="{% static 'js/hide_show_passw.js' %}"></script>
