--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -6,6 +6,7 @@
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
 {% endblock %}
+
 {% block controls %}
 
     {% if messages %}
@@ -105,9 +106,14 @@
     </div>
     <!-- Fin del nuevo campo -->
     <input type="submit" class="btn" value="Registrar">
-    {% endblock %}
+{% endblock %}
+
+
 
 {% block js %}
-<script src="{% static 'js/hide_show_passw.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+    <script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
+    <script src="{% static 'js/ocultar_mensajes.js'%}"></script>
+    <script src="{% static 'js/hide_show_passw.js' %}"></script>
+    <script src="{% static 'js/input_effect.js' %}"></script>
 {% endblock %}
+
