--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -111,10 +111,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
 
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src={% static 'js/side_bar.js' %}></script>
     {% block js %}
-    <script src="{% static 'js/jsprueba.js' %}"></script>
     {% endblock %}
 </body>
 
