--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -29,9 +29,13 @@ Registrar nueva novedad
         <td>Inactivo</td>
     {% endif %}
     <td>
-        <a href="#" class="btn-edit"> <i class="fa-duotone fa-solid fa-pen"></i> </a>
-
-        <a href="#" class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
+        <a class="btn-edit">
+            <i class="fa-duotone fa-solid fa-pen">
+                
+            </i></a>
+        
+        
+        <a class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
     </td>
 </tr>
 {% endfor %}
