--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
@@ -27,7 +27,11 @@ Registrar nuevo tipo de Novedad
             <td> Inactivo </td>
         {% endif %}
         <td>
-            <a href="#" class="btn-edit"> <i class="fa-duotone fa-solid fa-pen"></i> </a>
+            <a class="btn-edit" onclick="abrir_modal_editar('{% url 'novedad:editar_tipNov' tpn.id %}')">
+                <i class="fa-duotone fa-solid fa-pen"></i>
+            </a>
+            
+            
             <a href="#" class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
         </td>
     </tr>
