--- a/Autenticacion/templates/404.html
+++ b/Autenticacion/templates/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404 - Página no encontrada</title>
-    <link rel="stylesheet" href="{% 'Autenticacion/static/css/error404.css' %}">
+    <!-- <link rel="stylesheet" href="{% 'Autenticacion/static/css/error404.css' %}"> -->
 </head>
 <body>
     <div class="error-container">
