--- a/Autenticacion/Modulos/Login/templates/credenciales.html
+++ b/Autenticacion/Modulos/Login/templates/credenciales.html
@@ -12,7 +12,7 @@
       <!-- Cuerpo del mensaje -->
       <tr>
         <td style="padding: 30px; text-align: left; color: #333333;">
-          <h2 style="font-size: 22px; color: #333333;">Bienvenido, {{ user }}.</h2>
+          <h2 style="font-size: 22px; color: #333333;">Bienvenido, {{ nombre }}.</h2>
           <p style="font-size: 16px; line-height: 1.6; color: #555555; margin: 20px 0;">
             A continuación, encontrarás tus credenciales de acceso. Guarda esta información en un lugar seguro.
           </p>
