--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -12,6 +12,25 @@
     <!-- Main Content -->
     {% block forms %}
     <main class="main-content pt-5">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+            {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
+            {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
+
+        {% if form.errors %}
+        <div class="error-message">
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            {% endfor %}
+        </div>
+        {% endif %}
         <div class="container">
             <!-- Botón para abrir el modal -->
             <a class="btn btn-dark btn-add" onclick="abrir_modal('{{ dirurl }}')">
