--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
@@ -27,12 +27,14 @@ Registrar nuevo tipo de Novedad
             <td> Inactivo </td>
         {% endif %}
         <td>
-            <a class="btn-edit" onclick="abrir_modal_editar('{% url 'novedad:editar_tipNov' tpn.id %}')">
-                <i class="fa-duotone fa-solid fa-pen"></i>
+            <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'novedad:editar_tipNov' tpn.id %}')">
+                Editar
             </a>
             
-            
-            <a href="#" class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
+        
+            <a class="btn btn-danger"> 
+                Inactivar 
+            </a>
         </td>
     </tr>
     {% endfor %}
