--- a/Autenticacion/Modulos/Login/templates/listado_personal.html
+++ b/Autenticacion/Modulos/Login/templates/listado_personal.html
@@ -37,7 +37,9 @@ Registrar nuevo personal
     {% endif %}
 
     <td>
-        <a href="#" class="btn-edit"> <i class="fa-duotone fa-solid fa-pen"></i> </a>
+        <a class="btn-edit" onclick="abrir_modal_editar('{% url 'login:editar_personal' i.id %}')"> 
+            <i class="fa-duotone fa-solid fa-pen"></i> 
+        </a>
 
         <a href="#" class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
     </td>
