--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -23,18 +23,20 @@
 			<img src="{% static 'img/illustrationl.svg' %} ">
 		</div>
 		<div class="login-content">
-			<form method="post">
+			<form method="POST">
 				{% csrf_token %}
-				<div style='font-size: 1.2em'>
 
+				
+				<div style='font-size: 1.2em'>
+				{% if messages %}
 					{% for message in messages %}
-					<div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+						<div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
 									{% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
 									{% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
-						{{ message }}
-					</div>
+							{{ message }}
+						</div>
 					{% endfor %}
-
+				{% endif %}
 				</div>
 				<h2 class="title">Bienvenido</h2>
 				<div class="input-div one">
