--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
@@ -9,9 +9,6 @@ Módulo Ubicación
 Registrar nueva Ubicación
 {% endblock %}
 
-<script async src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap"
-    defer>
-</script>
 
 
 {% block thead %}
@@ -24,18 +21,32 @@ Registrar nueva Ubicación
 
 
 {% block tbody %}
-
 {% if ubicacion %}
+{% for i in ubicacion %}
 <tr>
-    <td> </td>
-    <td> </td>
-    <td> </td>
-    <td> </td>
-    <td> </td>
+    <td>{{i.Sector}} </td>
+    <td> {{ i.CallePrincipal}} </td>
+    <td> {{i.Interseccion}} </td>
+    {% if i.Estado == True %}
+    <td> Activo </td>
+    {% else %}
+    <td> Inactivo </td>
+    {% endif %}
+    <td> 
+        <td>
+
+    
+            <a class="btn btn-danger"> 
+                Inactivar 
+            </a>
+        </td>
+
+    </td>
 </tr>
+{% endfor %}
 {% else %}
 <tr>
     <td colspan="5"> No existe ubicación registrada </td>
 </tr>
-
+{% endif %}
 {% endblock %}
