--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -10,7 +10,7 @@
                 <span class="tooltip"> Reportes del Personal </span>
             </li>
             <li>
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="{% url 'ubicacion:inicio' %}">
                     <i class="fa-solid fa-map-location-dot"></i>
                     <span class="nav-item"> Lugares de Guardia </span>
                 </a>
