--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
@@ -1,7 +1,52 @@
 {% extends 'form.html' %}
 {% load static %}
 
-{% block controls %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/map.css' %}">
+<link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
+{% endblock %}
 
+{% block js %}
+<script src="{% static 'js/input_effect.js' %}"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&libraries=drawing&callback=initMap" loading="async" defer></script>
+<script src="{% static 'js/map.js' %}"></script>
+{% endblock %}
+
+
+{% block controls %}
+<div class="form-grid form-grid-map">
+    <div id="map"></div>
+    <div>
+        <div class="input-div one">
+            <div class="i">
+                <i class="fa-sharp fa-solid fa-location-dot"></i>
+            </div>
+            <div class="div">
+                <h5> Sector </h5>
+                {{ form.Sector }}
+            </div>
+        </div>
+
+        <div class="input-div one">
+            <div class="i">
+                <i class="fa-sharp fa-solid fa-road"></i>
+            </div>
+            <div class="div">
+                <h5> Calle Principal </h5>
+                {{ form.CallePrincipal }}
+            </div>
+        </div>
+
+        <div class="input-div one">
+            <div class="i">
+                <i class="fa-sharp fa-solid fa-location-arrow"></i>
+            </div>
+            <div class="div">
+                <h5> Intersección </h5>
+                {{ form.Interseccion }}
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
