--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
     <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">
     {% endblock %}
-
+    
     <!-- CSS - Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="{% url 'ubicacion:inicio' %}">
                 <div class="card">
                     <div class="img-container">
                         <i class="fa-solid fa-map-location-dot"></i>
@@ -111,10 +111,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-    <script src={% static 'js/side_bar.js' %}></script>
+    <script src="{% static 'js/side_bar.js' %}"></script>
     {% block js %}
     {% endblock %}
 </body>
