--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
@@ -12,6 +12,7 @@ Registrar nueva Ubicación
 
 
 {% block thead %}
+<th> Lugar </th>
 <th> Sector </th>
 <th> Calle principal </th>
 <th> Intersección </th>
@@ -24,7 +25,8 @@ Registrar nueva Ubicación
 {% if ubicacion %}
 {% for i in ubicacion %}
 <tr>
-    <td>{{i.Sector}} </td>
+    <td> {{i.Lugar}} </td>
+    <td> {{i.Sector}} </td>
     <td> {{ i.CallePrincipal}} </td>
     <td> {{i.Interseccion}} </td>
     {% if i.Estado == True %}
