Cambios en Mapa

--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/registrar_ubicacion.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block js %}
-<script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&libraries=drawing&callback=initMap" loading="async" defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&libraries=places&callback=initMap" loading="async" defer></script>
 <script src="{% static 'js/map.js' %}"></script>
 <script src="{% static 'js/input_effect.js' %}"></script>
 {% endblock %}
