Añadido pantalla de rol

--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -99,6 +99,16 @@
                     </div>
                 </div>
             </a>
+            <a href="{% url 'login:listar_rol' %}">
+                <div class="card">
+                    <div class="img-container">
+                        <i class="fa-sharp fa-solid fa-address-book"></i>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text"> Rol </p>
+                    </div>
+                </div>
+            </a>
         </main>
     </div>
     {% endblock %}
