--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -44,6 +44,13 @@
                 </a>
                 <span class="tooltip"> Planificación </span>
             </li>
+            <li>
+                <a class="nav-link active" href="{% url 'login:listar_rol' %}">
+                    <i class="fa-sharp fa-solid fa-address-book"></i>
+                    <span class="nav-item"> Rol </span>
+                </a>
+                <span class="tooltip"> Rol </span>
+            </li>
         </ul>
     </div>
     <div class="logout">
