--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="{% url 'ubicacion:inicio' %}">
                 <div class="card">
                     <div class="img-container">
                         <i class="fa-solid fa-map-location-dot"></i>
