--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -21,12 +21,12 @@ Registrar nueva novedad
 {% if novedad %}
 {% for nov in novedad %}
 <tr>
-    <td>{{ nov.TipoNovedad }}</td>
-    <td>{{ nov.Descripcion }}</td>
+    <td class="align-items-center" >{{ nov.TipoNovedad }}</td>
+    <td class="align-items-center">{{ nov.Descripcion }}</td>
     {% if nov.Estado == True %}
-    <td>Activo</td>
+    <td class="align-items-center">Activo</td>
     {% else %}
-    <td>Inactivo</td>
+    <td class="align-items-center">Inactivo</td>
     {% endif %}
     <td>
         <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'novedad:editar_nov' nov.id %}')">
