--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_novedad.html
@@ -6,7 +6,7 @@
 <div class="form-grid">
     <div class="input-div one">
         <div class="i">
-            <i class="fa-solid fa-user"></i>
+            <i class="fa-sharp fa-solid fa-window-maximize"></i>
         </div>
         <div class="div">
             <h5>Tipo de Novedad</h5>
@@ -16,7 +16,7 @@
 
     <div class="input-div one">
         <div class="i">
-            <i class="fa-solid fa-user"></i>
+            <i class="fa-sharp fa-solid fa-whiskey-glass"></i>
         </div>
         <div class="div">
             <h5>Descripción de la novedad</h5>
