--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_tipNovedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/registrar_tipNovedad.html
@@ -5,7 +5,7 @@
 <div class="form-grid">
     <div class="input-div one">
         <div class="i">
-            <i class="fa-solid fa-user"></i>
+            <i class="fa-sharp fa-solid fa-window-maximize"></i>
         </div>
         <div class="div">
             <h5>Tipo de Novedad</h5>
