--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -13,27 +13,27 @@
 
 
 {% block forms %}
-<form class="container text-dark" method="POST"  action="{{ action_save }}"  enctype="multipart/form-data"
+<form class="container text-dark" method="POST" action="{{ action_save }}" enctype="multipart/form-data"
     name="registro">
     {% csrf_token %}
     {% if messages %}
-        {% for message in messages %}
-        <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+    {% for message in messages %}
+    <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
             {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
             {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
-            {{ message }}
-        </div>
-        {% endfor %}
+        {{ message }}
+    </div>
+    {% endfor %}
     {% endif %}
 
     {% if form.errors %}
-        <div class="error-message">
-            {% for field in form %}
-                {% for error in field.errors %}
-                    <p>{{ error }}</p>
-                {% endfor %}
-            {% endfor %}
-        </div>
+    <div class="error-message">
+        {% for field in form %}
+        {% for error in field.errors %}
+        <p>{{ error }}</p>
+        {% endfor %}
+        {% endfor %}
+    </div>
     {% endif %}
     <div class="modal-dialog mod modal-lg" role="document">
         <div class="modal-content">
@@ -51,24 +51,26 @@
                         {% endblock %}
                     </div>
                 </div>
+
                 <div class="div-btn">
+                    
                     <button type="submit" class="btn ">
                         Guardar registro
                     </button>
-                    <button class="btn">
-                        <a href="{{cancelar}}" class="nav-link text-center">
-                            Cancelar
-                        </a>
-                    </button>
+                    <a href="{{cancelar}}" class="btn nav-link text-center align-items-center">
+
+                        Cancelar
+
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-  
-    
+
+
 </form>
 {% endblock %}
 
 {% block js %}
-    <script src="{% static 'js/input_effect.js' %}"></script>
+<script src="{% static 'js/input_effect.js' %}"></script>
 {% endblock %}
