--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -17,6 +17,13 @@
                 <span class="tooltip"> Rol </span>
             </li>
             <li>
+                <a class="nav-link active" href="{% url 'turno:listar_turno' %}">
+                    <i class="fa-sharp fa-solid fa-address-book"></i>
+                    <span class="nav-item"> Turno </span>
+                </a>
+                <span class="tooltip"> Turno </span>
+            </li>
+            <li>
                 <a class="nav-link active" href="{% url 'login:personal' %}">
                     <i class="fa-solid fa-users"></i>
                     <span class="nav-item"> Registro de personal </span>
